tests/miniJava/neg/006272_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { while ( length 0 ) { } } }
